# default_turninator

./: Dockerfile  README.md  data.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  turninator.py
.github/workflows/: deploy.yml
src/: templates.py  turninator.py
tests/api-requests/Default turninator/: Monolog simple.bru  XAIF Dialog.bru  XAIF Minimal.bru  bruno.json
tests/api-requests/Default turninator/environments/: (1) local.bru  (2) staging.bru  (3) production.bru
tests/api-requests/Default turninator/test-inputs/: dialog_sample.txt  monolog_sample.txt  xaif_dialog.json  xaif_minimal.json
